Added some html to banner

--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   </head>
   <body>
     <header>
+      <nav></nav>
+      <div>
+        <div>
+          <h1 class="text-7xl uppercase">
+            <span class="text-orange-400">Be the Penguins</span>
+            <br />
+            <span class="text-stone-400">of Winter</span>
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Repellendus, quasi.
+          </p>
+          <button>BUY NOW</button>
+        </div>
+        <div>
+          <img src="images/model.png" alt="Model" />
+        </div>
+      </div>
       <h1>Hello world</h1>
     </header>
     <main></main>
